<resources>
    <string name="app_name">ScoringApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tim_1">Tim 1</string>
    <string name="tim_2">Tim 2</string>
    <string name="masukkan_nama_tim">Masukkan nama Tim</string>
    <string name="mulai">Mulai</string>
    <string name="about_title">About</string>
    <string name="home_title">Home</string>
    <string name="match_title">Match</string>
    <string name="nama_tim_1">Nama tim 1</string>
    <string name="vs">VS</string>
    <string name="nama_tim_2">Nama tim 2</string>
    <string name="finished">Finished!</string>
    <string name="dynamic_text_here">dynamic text here</string>
    <string name="_0">0</string>
</resources>