<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScoringFragment">

        <TextView
            android:text="@string/nama_tim_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teamName1" android:textSize="36sp"
            android:layout_marginTop="88dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
        <TextView
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoreNum1" android:textSize="36sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/teamName1"
            app:layout_constraintEnd_toEndOf="@+id/teamName1" app:layout_constraintStart_toStartOf="@+id/teamName1"/>
        <TextView
            android:text="@string/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="50sp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/scoreNum1"
            app:layout_constraintStart_toStartOf="@+id/scoreNum1"
            app:layout_constraintEnd_toEndOf="@+id/scoreNum1"/>
        <TextView
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoreNum2"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/textView4"
            android:textSize="36sp"/>
        <TextView
            android:text="@string/nama_tim_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teamName2" android:textSize="36sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/scoreNum2"
            app:layout_constraintStart_toStartOf="@+id/scoreNum2"
            app:layout_constraintEnd_toEndOf="@+id/scoreNum2"/>

        <Button
            android:id="@+id/scoreButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginBottom="136dp"
            android:background="#6200EA"
            android:padding="15sp"
            android:text="@string/tim_1"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/scoreButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="136dp"
            android:background="#2962FF"
            android:padding="15sp"
            android:text="@string/tim_2"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.546"
            app:layout_constraintStart_toEndOf="@+id/scoreButton1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>