<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IntroFragment">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/teamName1"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginLeft="8dp"
            android:hint="@string/tim_1"
            android:autofillHints="Tim 1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/teamName2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/teamName1"
            app:layout_constraintStart_toStartOf="@+id/teamName1"
            android:hint="@string/tim_2"
            android:autofillHints="Tim 2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="casual"
            android:text="@string/masukkan_nama_tim"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#651FFF"
            android:padding="15sp"
            android:text="@string/mulai"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/teamName2"
            app:layout_constraintTop_toBottomOf="@+id/teamName2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>